# clx.v2

./: .gitattributes  README.md  pytest.ini  setup.cfg  tox.ini
services/: compose.yaml  nats-server.conf
services/drawio-converter/: Dockerfile  drawio_converter.py  entrypoint.sh  requirements.txt
services/nats-init/: Dockerfile  nats_init.py
services/notebook-processor/: Dockerfile  nb_test.py  requirements.txt  setup.cfg
services/notebook-processor/nb/: nats_server.py  notebook_processor.py  output_spec.py  payload.py
services/notebook-processor/nb/utils/: prog_lang_utils.py
services/plantuml-converter/: Dockerfile  plantuml_converter.py
services/query-scripts/: connect_to_server.py  query_drawio_converter.py  query_nb_converter2.py  query_nb_processor.py  query_plantuml_converter.py
services/test-scripts/: drawio_test.py  nb_test.py  nb_test2.py  plantuml_test.py
src/clx/: __main__.py  course.py  course_file.py  course_spec.py  file.py  file_ops.py  operation.py  topic.py
src/clx/operations/: convert_drawio_file.py  convert_plantuml_file.py  process_notebook.py
src/clx/utils/: div_uils.py  execution_uils.py  fun_utils.py  nats_utils.py  notebook_utils.py  path_utils.py  text_utils.py
tests/: conftest.py  course_fixtures.py  course_spec_test.py  course_test.py  file_test.py  fun_utils_test.py  main_test.py  operation_test.py  path_utils_test.py  topic_test.py
tests/data/course-specs/: test-spec.xml
tests/data/slides/module_020_test_3/: topic_100_slides_in_test_3.py
tests/data/slides/module_020_test_3/pu/: your_diag.pu
