[metadata]
name = notebook-processor
version = 0.0.1
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = Notebook Processor for CLX
long_description = Processes Jupyter Notebooks for CLX
long_description_content_type = text/markdown
url = https://github.com/hoelzl/clx/
project_urls =
    Bug Tracker = https://github.com/hoelzl/clx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11

install_requires =
    attrs>=23.1
    cattrs>=23.1
    click>=8.0
    platformdirs>=1.4
    nats-py~=2.8.0
    aiofiles~=24.1.0
    ipython~=8.26.0
    ipykernel~=6.29.5
    jinja2~=3.1.4
    jupytext==1.16.3
    nats-py~=2.8.0
    nbformat~=5.10.4
    nbconvert~=7.16.4
